# ProceduralTreeGeneration

./: .gitignore  CMakeLists.txt  ProceduralTreeGeneration.sln  ProceduralTreeGeneration.vcxproj  ProceduralTreeGeneration.vcxproj.filters  README.md  cmake-presets.json  imgui.ini
include/: attraction_points.h  camera.h  common_types.h  cylinder.h  leaf.h  renderer.h  shader.h  sphere.h  tree.h  tree_nodes.h  window.h
resource/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: attraction_points.cpp  camera.cpp  cylinder.cpp  leaf.cpp  main.cpp  renderer.cpp  shader.cpp  tree.cpp  tree_nodes.cpp  window.cpp
